--- a/potfolia.html
+++ b/potfolia.html
@@ -73,9 +73,9 @@
 
     <section class="contact">
         <h2>Bog'lanish mumkin bo'lgan malumotlar</h2>
-        <p>Email: saidbeksodiqov495@gmail.com</p>
-        <p>Telegram: @saidbeksodiqov</p>
-        <p>GitHub: github.com/saidbek051</p>
+       <p><a href="https://saidbeksodiqov495@gmail.com" target="_blank">Gmail</a></p> 
+        <p><a href="https://t.me/saidbeksodiqov" target="_blank">Telegram</a></p>
+        <a href="https://github.com/saidbek051" target="_blank">GitHub</a>
         <p>Telefon raqam: 91 *** ** **</p>
 
     </section>
