--- a/potfolia.html
+++ b/potfolia.html
@@ -217,17 +217,19 @@
     <!-- O‘ngdagi rasmlar -->
     <div class="image-container">
       <div class="image-wrapper">
-        <img class="rasm1" src="C:/Users/user/Pictures/photo_2025-04-14_14-52-12.jpg" alt="Portfolio Image 1" />
+        <img class="rasm1" src="./img/photo_2025-04-14_14-52-12.jpg" alt="">
+        <!-- <img class="rasm1" src="C:/Users/user/Pictures/photo_2025-04-14_14-52-12.jpg" alt="Portfolio Image 1" /> -->
         <div class="overlay-text">Men haqimda</div>
       </div>
 
       <div class="image-wrapper">
-        <img class="rasm2" src="C:/Users/user/Desktop/vscode/pythonlogo.jpg" alt="Portfolio Image 2" />
+        <!-- <img class="rasm2" src="C:/Users/user/Desktop/vscode/pythonlogo.jpg" alt="Portfolio Image 2" /> -->
+         <img class="rasm2" src="./img/pythonlogo.jpg" alt="">
         <div class="overlay-text">Python logosi</div>
       </div>
 
       <div class="image-wrapper">
-        <img src="C:/Users/user/Pictures/Screenshots/Screenshot 2025-04-16 202049.png" alt="Portfolio Image 3" />
+        <img src="./img/Screenshot 2025-04-16 202049.png" alt="Portfolio Image 3" />
         <div class="overlay-text">Faoliyatdan lavha</div>
       </div>
 
